# dockerized-msg-subscriber-and-webserver

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.vs  README.md  conanfile.txt  makefile  x64-linux-musl.cmake
src/: CMakeLists.txt  CMakeSettings.json  build.sh  catch_test.cpp  consoleLogger.cpp  consoleLogger.hpp  foo_test.cpp  main.cpp  main.hpp  server.cpp  server.hpp  taskDiagnostic.hpp
src/queue/: connectionHandler.cpp  connectionHandler.hpp  queueListener.cpp  queueListener.hpp
src/server/: server.cpp  server.hpp
src/worker/: worker.cpp  worker.hpp
